finished page (without adaptation)

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,5 @@
-$colors: (golden: #d1a954,
+$colors: (
+  golden: #d1a954,
   gray-custom: rgba(51, 51, 51, 0.85),
 );
 
@@ -13,7 +14,6 @@ $colors: (golden: #d1a954,
     weight: $weight;
     size: $size;
   }
-
   line-height: $line-height;
 }
 
@@ -257,7 +257,7 @@ header {
             }
           }
 
-          >img {
+          > img {
             position: relative;
             z-index: 3;
             animation-name: slider-move;
@@ -297,7 +297,7 @@ header {
 }
 
 .about-theater {
-  padding: 150px 0px;
+  padding: 150px 0px 75px 0px;
 
   h2 {
     margin-bottom: 100px;
@@ -336,8 +336,7 @@ header {
 }
 
 .perfomances {
-  padding-left: 150px;
-
+  padding: 75px 0px 75px 150px;
   h2 {
     margin-bottom: 100px;
   }
@@ -418,7 +417,7 @@ header {
 }
 
 .rating {
-  padding-top: 150px;
+  padding: 75px 0px;
 
   .medium-container {
     background: {
@@ -430,12 +429,12 @@ header {
 
     .rating-layer {
       background: {
-        color: #333333E5;
+        color: #333333e5;
       }
 
       padding: 126px 95px 126px 190px;
       display: flex;
-
+      align-items: center;
       .rating-years {
         margin-right: 103px;
 
@@ -449,16 +448,135 @@ header {
 
       .rating-content {
         max-width: 490px;
-
+        .rating-stars {
+          max-width: 230px;
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 25px;
+          i {
+            font-size: 26px;
+            color: map-get($colors, golden);
+          }
+        }
         p {
           font: {
             style: normal;
             weight: bold;
             size: 36px;
-          }     
+          }
           line-height: 150%;
         }
       }
+    }
+  }
+}
+
+.partners {
+  padding-top: 75px;
+  .medium-container {
+    max-width: 1034px;
+    h2 {
+      margin-bottom: 100px;
+    }
+    .partner-logo-container {
+      display: flex;
+      flex-wrap: wrap;
+      img {
+        max-width: 180px;
+        width: 100%;
+        margin: {
+          left: 78px;
+          bottom: 80px;
+        }
+      }
+    }
+  }
+}
+
+.become-mecenate {
+  padding: 40px 0px;
+  .medium-container {
+    h2 {
+      margin-bottom: 100px;
+    }
+    .form-container {
+      display: flex;
+      justify-content: space-between;
+      .form-contacts {
+        max-width: 247px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        a {
+          font-size: 16px;
+          line-height: 22px;
+          letter-spacing: 0.05em;
+          margin-bottom: 25px;
+        }
+      }
+      form {
+        max-width: 730px;
+        input,
+        textarea {
+          padding: 8px 15px;
+          outline: none;
+          border: 1px solid #616161;
+          background: #444444;
+          font-family: Open Sans;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 12px;
+          line-height: 150%;
+          &::placeholder {
+            color: #989898;
+          }
+          color: white;
+        }
+        .input-fields-container {
+          display: grid;
+          margin-bottom: 40px;
+          grid-template-columns: 1fr 1fr 2fr;
+          row-gap: 30px;
+          column-gap: 30px;
+          textarea {
+            resize: none;
+            overflow: hidden;
+            grid-column-start: 3;
+            grid-column-end: 3;
+            grid-row-start: 1;
+            grid-row-end: 3;
+          }
+        }
+        .submit-button-container {
+          display: flex;
+          justify-content: space-between;
+          align-items: flex-start;
+          p {
+            max-width: 390px;
+            font-size: 12px;
+            line-height: 150%;
+            color: #989898;
+          }
+        }
+      }
+    }
+  }
+}
+
+footer {
+  padding-top: 40px;
+  .medium-container {
+    padding: {
+      top: 30px;
+      bottom: 30px;
+    }
+    border-top: 1px solid #565656;
+    display: flex;
+    justify-content: space-between;
+    p {
+      font-size: 12px;
+      line-height: 150%;
+      color: #989898;
     }
   }
 }
